--- a/CSS/productos.css
+++ b/CSS/productos.css
@@ -15,23 +15,18 @@ article {
     right: 0px;
     position: absolute;
     background: #0000aa;
-    width: 80%;
+    width: 88%;
 }
 
-section {
-    display: inline-block;
-    margin: 5px;
+section {    
     background: #a0a000;
-    width: 25%;
-    text-align: center;
 }
 
 aside {
     left: 0px;
     position: absolute;
     background: #00a0a0;
-    text-align: center;
-    width: 20%;
+    width: 12%;
 }
 
 footer {
@@ -44,4 +39,12 @@ p {color: greenyellow;}
 img {
     margin: 10px;
     width: 90%;
+}
+
+.producto {    
+    margin: 10px;
+    background: skyblue;
+    width: 23%;
+    text-align: center;
+    display: inline-block;
 }
